--- a/Pedro_Henrique_Desafio_Modulo1.ipynb
+++ b/Pedro_Henrique_Desafio_Modulo1.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Pedro_Henrique_Desafio_Modulo1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPt9ddpQcNCgeEA/JhGeN0i",
+      "collapsed_sections": [],
+      "mount_file_id": "1i4607Ywx4n1hhLeGxhwBTOwioaZGsNhu",
+      "authorship_tag": "ABX9TyMjS5lN4wy3l5feXxfbGWBk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,14 +27,313 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QnJOTyFXfWoy"
+      },
+      "source": [
+        "## Resumo:\n",
+        "Faça aqui o resumo das suas analises, destacando os pontos principais do seu projeto"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DeBaOq5vghpj"
+      },
+      "source": [
+        "## Análise dos dados:\n",
+        "\n",
+        "Inicie aqui o desenvolvimento do seu projeto, não esqueça de adicionar textos curtos e objetivos para que os avaliadores entendam sua linha de raciocínio e as conclusões que você está chegando crie uma narrativa convincente e coerênte aos dados analisados."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3JqFGQXFg1q_"
+      },
+      "source": [
+        "## Definição do Projeto: \n",
+        "Caso Covid-19"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "UpAqZ4AuSei8"
       },
       "source": [
+        "url = \"/content/drive/MyDrive/Bootcamp/Modulo 1/Projeto Final/caso.csv\""
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6bZYOdFbhctK"
+      },
+      "source": [
+        "## Importando as Bibliotecas:\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8AJLrF_iVEJN"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import  matplotlib.ticker as ticker \n",
+        "import seaborn as sns"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "foUUeTygh_vK"
+      },
+      "source": [
+        "pd.options.display.float_format = \"{:,.2f}\".format"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QkkUpOGqkrzw"
+      },
+      "source": [
+        "## Análises:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2dvUrGYsVMBv"
+      },
+      "source": [
+        "#Lendo a base covid-19 que está em \"Definição do Projeto\".\n",
+        "dados = pd.read_csv(url) \n"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "45Xp4NySVZrO",
+        "outputId": "332033c2-890f-4da6-f7fa-404a40e9f2d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 316
+        }
+      },
+      "source": [
+        "#Uma pequena visualização aleatória para conhecer a base e suas variáveis.\n",
+        "dados.sample(5) "
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>date</th>\n",
+              "      <th>state</th>\n",
+              "      <th>city</th>\n",
+              "      <th>place_type</th>\n",
+              "      <th>confirmed</th>\n",
+              "      <th>deaths</th>\n",
+              "      <th>order_for_place</th>\n",
+              "      <th>is_last</th>\n",
+              "      <th>estimated_population_2019</th>\n",
+              "      <th>estimated_population</th>\n",
+              "      <th>city_ibge_code</th>\n",
+              "      <th>confirmed_per_100k_inhabitants</th>\n",
+              "      <th>death_rate</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>970789</th>\n",
+              "      <td>2020-09-03</td>\n",
+              "      <td>SP</td>\n",
+              "      <td>Valinhos</td>\n",
+              "      <td>city</td>\n",
+              "      <td>2420</td>\n",
+              "      <td>76</td>\n",
+              "      <td>160</td>\n",
+              "      <td>False</td>\n",
+              "      <td>129,193.00</td>\n",
+              "      <td>131,210.00</td>\n",
+              "      <td>3,556,206.00</td>\n",
+              "      <td>1,844.37</td>\n",
+              "      <td>0.03</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>760270</th>\n",
+              "      <td>2020-08-31</td>\n",
+              "      <td>RS</td>\n",
+              "      <td>Torres</td>\n",
+              "      <td>city</td>\n",
+              "      <td>700</td>\n",
+              "      <td>8</td>\n",
+              "      <td>163</td>\n",
+              "      <td>False</td>\n",
+              "      <td>38,732.00</td>\n",
+              "      <td>39,064.00</td>\n",
+              "      <td>4,321,501.00</td>\n",
+              "      <td>1,791.93</td>\n",
+              "      <td>0.01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>351853</th>\n",
+              "      <td>2020-10-22</td>\n",
+              "      <td>MG</td>\n",
+              "      <td>Alfredo Vasconcelos</td>\n",
+              "      <td>city</td>\n",
+              "      <td>17</td>\n",
+              "      <td>1</td>\n",
+              "      <td>158</td>\n",
+              "      <td>False</td>\n",
+              "      <td>6,907.00</td>\n",
+              "      <td>6,981.00</td>\n",
+              "      <td>3,101,631.00</td>\n",
+              "      <td>243.52</td>\n",
+              "      <td>0.06</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>938381</th>\n",
+              "      <td>2020-06-10</td>\n",
+              "      <td>SP</td>\n",
+              "      <td>Porangaba</td>\n",
+              "      <td>city</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>35</td>\n",
+              "      <td>False</td>\n",
+              "      <td>9,925.00</td>\n",
+              "      <td>10,067.00</td>\n",
+              "      <td>3,540,507.00</td>\n",
+              "      <td>59.60</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>953668</th>\n",
+              "      <td>2020-09-24</td>\n",
+              "      <td>SP</td>\n",
+              "      <td>Santo Antônio do Aracanguá</td>\n",
+              "      <td>city</td>\n",
+              "      <td>158</td>\n",
+              "      <td>6</td>\n",
+              "      <td>151</td>\n",
+              "      <td>False</td>\n",
+              "      <td>8,420.00</td>\n",
+              "      <td>8,481.00</td>\n",
+              "      <td>3,548,054.00</td>\n",
+              "      <td>1,862.99</td>\n",
+              "      <td>0.04</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "              date state  ... confirmed_per_100k_inhabitants death_rate\n",
+              "970789  2020-09-03    SP  ...                       1,844.37       0.03\n",
+              "760270  2020-08-31    RS  ...                       1,791.93       0.01\n",
+              "351853  2020-10-22    MG  ...                         243.52       0.06\n",
+              "938381  2020-06-10    SP  ...                          59.60       0.00\n",
+              "953668  2020-09-24    SP  ...                       1,862.99       0.04\n",
+              "\n",
+              "[5 rows x 13 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6k7uF_nzXCvf",
+        "outputId": "39e7a1ac-4849-450a-c0f4-cd0c032170be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Existem informações nulas no dataset de acordo com info, nos campos: city, estimated_population_2019, etimated_population, city_ibge_code and confirmed_per_100k_inhabitants.\n",
+        "dados.info()"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 974824 entries, 0 to 974823\n",
+            "Data columns (total 13 columns):\n",
+            " #   Column                          Non-Null Count   Dtype  \n",
+            "---  ------                          --------------   -----  \n",
+            " 0   date                            974824 non-null  object \n",
+            " 1   state                           974824 non-null  object \n",
+            " 2   city                            968230 non-null  object \n",
+            " 3   place_type                      974824 non-null  object \n",
+            " 4   confirmed                       974824 non-null  int64  \n",
+            " 5   deaths                          974824 non-null  int64  \n",
+            " 6   order_for_place                 974824 non-null  int64  \n",
+            " 7   is_last                         974824 non-null  bool   \n",
+            " 8   estimated_population_2019       971052 non-null  float64\n",
+            " 9   estimated_population            971052 non-null  float64\n",
+            " 10  city_ibge_code                  971052 non-null  float64\n",
+            " 11  confirmed_per_100k_inhabitants  957481 non-null  float64\n",
+            " 12  death_rate                      974824 non-null  float64\n",
+            "dtypes: bool(1), float64(5), int64(3), object(4)\n",
+            "memory usage: 90.2+ MB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a0E3j7eOnHvo"
+      },
+      "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     }
   ]
