--- a/Pedro_Henrique_Desafio_Modulo1.ipynb
+++ b/Pedro_Henrique_Desafio_Modulo1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1i4607Ywx4n1hhLeGxhwBTOwioaZGsNhu",
-      "authorship_tag": "ABX9TyMjS5lN4wy3l5feXxfbGWBk",
+      "authorship_tag": "ABX9TyO4n+ccMYPUYddL5xRt+5IS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -331,9 +331,274 @@
         "id": "a0E3j7eOnHvo"
       },
       "source": [
-        ""
+        "#Alterando o tipo da coluna date apra Datetime.\n",
+        "dados['date'] = pd.to_datetime(dados['date'],yearfirst=True) "
       ],
-      "execution_count": 6,
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8SEDnyGSOo95",
+        "outputId": "8db1b2c7-af9a-430a-f076-6a451d6b731b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Conferindo a alteração do tipo do campo date.\n",
+        "dados.info()"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 974824 entries, 0 to 974823\n",
+            "Data columns (total 13 columns):\n",
+            " #   Column                          Non-Null Count   Dtype         \n",
+            "---  ------                          --------------   -----         \n",
+            " 0   date                            974824 non-null  datetime64[ns]\n",
+            " 1   state                           974824 non-null  object        \n",
+            " 2   city                            968230 non-null  object        \n",
+            " 3   place_type                      974824 non-null  object        \n",
+            " 4   confirmed                       974824 non-null  int64         \n",
+            " 5   deaths                          974824 non-null  int64         \n",
+            " 6   order_for_place                 974824 non-null  int64         \n",
+            " 7   is_last                         974824 non-null  bool          \n",
+            " 8   estimated_population_2019       971052 non-null  float64       \n",
+            " 9   estimated_population            971052 non-null  float64       \n",
+            " 10  city_ibge_code                  971052 non-null  float64       \n",
+            " 11  confirmed_per_100k_inhabitants  957481 non-null  float64       \n",
+            " 12  death_rate                      974824 non-null  float64       \n",
+            "dtypes: bool(1), datetime64[ns](1), float64(5), int64(3), object(3)\n",
+            "memory usage: 90.2+ MB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vrm7YphnOrqx",
+        "outputId": "315e746a-cb27-4fff-8d7f-81f9e986c680",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#De acordo com a documentação irei excluir a coluna \"estimated_population_2019\", por possuir valores desatualizados.\n",
+        "dados = dados.drop('estimated_population_2019', axis=1)\n",
+        "dados.info()"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 974824 entries, 0 to 974823\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column                          Non-Null Count   Dtype         \n",
+            "---  ------                          --------------   -----         \n",
+            " 0   date                            974824 non-null  datetime64[ns]\n",
+            " 1   state                           974824 non-null  object        \n",
+            " 2   city                            968230 non-null  object        \n",
+            " 3   place_type                      974824 non-null  object        \n",
+            " 4   confirmed                       974824 non-null  int64         \n",
+            " 5   deaths                          974824 non-null  int64         \n",
+            " 6   order_for_place                 974824 non-null  int64         \n",
+            " 7   is_last                         974824 non-null  bool          \n",
+            " 8   estimated_population            971052 non-null  float64       \n",
+            " 9   city_ibge_code                  971052 non-null  float64       \n",
+            " 10  confirmed_per_100k_inhabitants  957481 non-null  float64       \n",
+            " 11  death_rate                      974824 non-null  float64       \n",
+            "dtypes: bool(1), datetime64[ns](1), float64(4), int64(3), object(3)\n",
+            "memory usage: 82.7+ MB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1wOc-dSFSmtF"
+      },
+      "source": [
+        "#Adcionando coluna de número de óbitos por 100.000 habitantes\n",
+        "dados['deaths_covid_per_100K_inhabitants'] = dados['deaths']/(dados['estimated_population']/100000)"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KUVTuJvNX-2z",
+        "outputId": "1443dadb-74a6-4974-df27-ca69c15d746f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 299
+        }
+      },
+      "source": [
+        "dados.head()"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>date</th>\n",
+              "      <th>state</th>\n",
+              "      <th>city</th>\n",
+              "      <th>place_type</th>\n",
+              "      <th>confirmed</th>\n",
+              "      <th>deaths</th>\n",
+              "      <th>order_for_place</th>\n",
+              "      <th>is_last</th>\n",
+              "      <th>estimated_population</th>\n",
+              "      <th>city_ibge_code</th>\n",
+              "      <th>confirmed_per_100k_inhabitants</th>\n",
+              "      <th>death_rate</th>\n",
+              "      <th>deaths_covid_per_100K_inhabitants</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2020-11-15</td>\n",
+              "      <td>AP</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>state</td>\n",
+              "      <td>54979</td>\n",
+              "      <td>777</td>\n",
+              "      <td>236</td>\n",
+              "      <td>True</td>\n",
+              "      <td>861,773.00</td>\n",
+              "      <td>16.00</td>\n",
+              "      <td>6,379.75</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>90.16</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2020-11-14</td>\n",
+              "      <td>AP</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>state</td>\n",
+              "      <td>54838</td>\n",
+              "      <td>777</td>\n",
+              "      <td>235</td>\n",
+              "      <td>False</td>\n",
+              "      <td>861,773.00</td>\n",
+              "      <td>16.00</td>\n",
+              "      <td>6,363.39</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>90.16</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2020-11-13</td>\n",
+              "      <td>AP</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>state</td>\n",
+              "      <td>54417</td>\n",
+              "      <td>774</td>\n",
+              "      <td>234</td>\n",
+              "      <td>False</td>\n",
+              "      <td>861,773.00</td>\n",
+              "      <td>16.00</td>\n",
+              "      <td>6,314.54</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>89.81</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2020-11-12</td>\n",
+              "      <td>AP</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>state</td>\n",
+              "      <td>54056</td>\n",
+              "      <td>771</td>\n",
+              "      <td>233</td>\n",
+              "      <td>False</td>\n",
+              "      <td>861,773.00</td>\n",
+              "      <td>16.00</td>\n",
+              "      <td>6,272.65</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>89.47</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2020-11-11</td>\n",
+              "      <td>AP</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>state</td>\n",
+              "      <td>53790</td>\n",
+              "      <td>770</td>\n",
+              "      <td>232</td>\n",
+              "      <td>False</td>\n",
+              "      <td>861,773.00</td>\n",
+              "      <td>16.00</td>\n",
+              "      <td>6,241.78</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>89.35</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        date state  ... death_rate deaths_covid_per_100K_inhabitants\n",
+              "0 2020-11-15    AP  ...       0.01                             90.16\n",
+              "1 2020-11-14    AP  ...       0.01                             90.16\n",
+              "2 2020-11-13    AP  ...       0.01                             89.81\n",
+              "3 2020-11-12    AP  ...       0.01                             89.47\n",
+              "4 2020-11-11    AP  ...       0.01                             89.35\n",
+              "\n",
+              "[5 rows x 13 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b5AAQsa8YB8G"
+      },
+      "source": [
+        "dados['death_rate'] = pd.to"
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
