--- a/Pedro_Henrique_Desafio_Modulo1.ipynb
+++ b/Pedro_Henrique_Desafio_Modulo1.ipynb
@@ -6,8 +6,8 @@
       "name": "Pedro_Henrique_Desafio_Modulo1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "mount_file_id": "1i4607Ywx4n1hhLeGxhwBTOwioaZGsNhu",
-      "authorship_tag": "ABX9TyO4n+ccMYPUYddL5xRt+5IS",
+      "mount_file_id": "https://github.com/p3dr3nriqu3/boocamp_alura/blob/main/Pedro_Henrique_Desafio_Modulo1.ipynb",
+      "authorship_tag": "ABX9TyOXoOhva03WgIoiOD3YtvM4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,11 +130,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "45Xp4NySVZrO",
-        "outputId": "332033c2-890f-4da6-f7fa-404a40e9f2d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
-        }
+        },
+        "outputId": "a5a9cb56-1869-4f02-aee6-4e8ea6b9a84b"
       },
       "source": [
         "#Uma pequena visualização aleatória para conhecer a base e suas variáveis.\n",
@@ -181,84 +181,84 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>970789</th>\n",
-              "      <td>2020-09-03</td>\n",
+              "      <th>879941</th>\n",
+              "      <td>2020-05-03</td>\n",
               "      <td>SP</td>\n",
-              "      <td>Valinhos</td>\n",
+              "      <td>Chavantes</td>\n",
               "      <td>city</td>\n",
-              "      <td>2420</td>\n",
-              "      <td>76</td>\n",
-              "      <td>160</td>\n",
-              "      <td>False</td>\n",
-              "      <td>129,193.00</td>\n",
-              "      <td>131,210.00</td>\n",
-              "      <td>3,556,206.00</td>\n",
-              "      <td>1,844.37</td>\n",
-              "      <td>0.03</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>760270</th>\n",
-              "      <td>2020-08-31</td>\n",
-              "      <td>RS</td>\n",
-              "      <td>Torres</td>\n",
-              "      <td>city</td>\n",
-              "      <td>700</td>\n",
-              "      <td>8</td>\n",
-              "      <td>163</td>\n",
-              "      <td>False</td>\n",
-              "      <td>38,732.00</td>\n",
-              "      <td>39,064.00</td>\n",
-              "      <td>4,321,501.00</td>\n",
-              "      <td>1,791.93</td>\n",
-              "      <td>0.01</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>351853</th>\n",
-              "      <td>2020-10-22</td>\n",
-              "      <td>MG</td>\n",
-              "      <td>Alfredo Vasconcelos</td>\n",
-              "      <td>city</td>\n",
-              "      <td>17</td>\n",
               "      <td>1</td>\n",
-              "      <td>158</td>\n",
-              "      <td>False</td>\n",
-              "      <td>6,907.00</td>\n",
-              "      <td>6,981.00</td>\n",
-              "      <td>3,101,631.00</td>\n",
-              "      <td>243.52</td>\n",
-              "      <td>0.06</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>938381</th>\n",
-              "      <td>2020-06-10</td>\n",
-              "      <td>SP</td>\n",
-              "      <td>Porangaba</td>\n",
-              "      <td>city</td>\n",
-              "      <td>6</td>\n",
               "      <td>0</td>\n",
-              "      <td>35</td>\n",
+              "      <td>13</td>\n",
               "      <td>False</td>\n",
-              "      <td>9,925.00</td>\n",
-              "      <td>10,067.00</td>\n",
-              "      <td>3,540,507.00</td>\n",
-              "      <td>59.60</td>\n",
+              "      <td>12,418.00</td>\n",
+              "      <td>12,418.00</td>\n",
+              "      <td>3,557,204.00</td>\n",
+              "      <td>8.05</td>\n",
               "      <td>0.00</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>953668</th>\n",
-              "      <td>2020-09-24</td>\n",
-              "      <td>SP</td>\n",
-              "      <td>Santo Antônio do Aracanguá</td>\n",
+              "      <th>648186</th>\n",
+              "      <td>2020-07-31</td>\n",
+              "      <td>RR</td>\n",
+              "      <td>São Luiz</td>\n",
               "      <td>city</td>\n",
-              "      <td>158</td>\n",
-              "      <td>6</td>\n",
-              "      <td>151</td>\n",
+              "      <td>178</td>\n",
+              "      <td>2</td>\n",
+              "      <td>102</td>\n",
               "      <td>False</td>\n",
-              "      <td>8,420.00</td>\n",
-              "      <td>8,481.00</td>\n",
-              "      <td>3,548,054.00</td>\n",
-              "      <td>1,862.99</td>\n",
-              "      <td>0.04</td>\n",
+              "      <td>7,986.00</td>\n",
+              "      <td>8,110.00</td>\n",
+              "      <td>1,400,605.00</td>\n",
+              "      <td>2,194.82</td>\n",
+              "      <td>0.01</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>189057</th>\n",
+              "      <td>2020-05-14</td>\n",
+              "      <td>BA</td>\n",
+              "      <td>Paulo Afonso</td>\n",
+              "      <td>city</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0</td>\n",
+              "      <td>24</td>\n",
+              "      <td>False</td>\n",
+              "      <td>117,782.00</td>\n",
+              "      <td>118,516.00</td>\n",
+              "      <td>2,924,009.00</td>\n",
+              "      <td>8.44</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>345010</th>\n",
+              "      <td>2020-07-17</td>\n",
+              "      <td>PB</td>\n",
+              "      <td>São José de Espinharas</td>\n",
+              "      <td>city</td>\n",
+              "      <td>12</td>\n",
+              "      <td>0</td>\n",
+              "      <td>77</td>\n",
+              "      <td>False</td>\n",
+              "      <td>4,682.00</td>\n",
+              "      <td>4,656.00</td>\n",
+              "      <td>2,514,404.00</td>\n",
+              "      <td>257.73</td>\n",
+              "      <td>0.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>854028</th>\n",
+              "      <td>2020-09-29</td>\n",
+              "      <td>SC</td>\n",
+              "      <td>Vargem</td>\n",
+              "      <td>city</td>\n",
+              "      <td>78</td>\n",
+              "      <td>1</td>\n",
+              "      <td>137</td>\n",
+              "      <td>False</td>\n",
+              "      <td>2,477.00</td>\n",
+              "      <td>2,432.00</td>\n",
+              "      <td>4,219,150.00</td>\n",
+              "      <td>3,207.24</td>\n",
+              "      <td>0.01</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -266,11 +266,11 @@
             ],
             "text/plain": [
               "              date state  ... confirmed_per_100k_inhabitants death_rate\n",
-              "970789  2020-09-03    SP  ...                       1,844.37       0.03\n",
-              "760270  2020-08-31    RS  ...                       1,791.93       0.01\n",
-              "351853  2020-10-22    MG  ...                         243.52       0.06\n",
-              "938381  2020-06-10    SP  ...                          59.60       0.00\n",
-              "953668  2020-09-24    SP  ...                       1,862.99       0.04\n",
+              "879941  2020-05-03    SP  ...                           8.05       0.00\n",
+              "648186  2020-07-31    RR  ...                       2,194.82       0.01\n",
+              "189057  2020-05-14    BA  ...                           8.44       0.00\n",
+              "345010  2020-07-17    PB  ...                         257.73       0.00\n",
+              "854028  2020-09-29    SC  ...                       3,207.24       0.01\n",
               "\n",
               "[5 rows x 13 columns]"
             ]
@@ -286,10 +286,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "6k7uF_nzXCvf",
-        "outputId": "39e7a1ac-4849-450a-c0f4-cd0c032170be",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9fb3e0d6-b568-4a76-aba6-b74809cbf491"
       },
       "source": [
         "#Existem informações nulas no dataset de acordo com info, nos campos: city, estimated_population_2019, etimated_population, city_ibge_code and confirmed_per_100k_inhabitants.\n",
@@ -341,10 +341,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "8SEDnyGSOo95",
-        "outputId": "8db1b2c7-af9a-430a-f076-6a451d6b731b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ae7fd54e-bcf8-491b-a6e1-a33999eddef4"
       },
       "source": [
         "#Conferindo a alteração do tipo do campo date.\n",
@@ -384,17 +384,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "vrm7YphnOrqx",
-        "outputId": "315e746a-cb27-4fff-8d7f-81f9e986c680",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6a9f972a-faea-4286-fd73-5f7dd3597ba1"
       },
       "source": [
         "#De acordo com a documentação irei excluir a coluna \"estimated_population_2019\", por possuir valores desatualizados.\n",
         "dados = dados.drop('estimated_population_2019', axis=1)\n",
         "dados.info()"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,23 +432,23 @@
         "#Adcionando coluna de número de óbitos por 100.000 habitantes\n",
         "dados['deaths_covid_per_100K_inhabitants'] = dados['deaths']/(dados['estimated_population']/100000)"
       ],
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "KUVTuJvNX-2z",
-        "outputId": "1443dadb-74a6-4974-df27-ca69c15d746f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
-        }
+        },
+        "outputId": "56eecb7f-aa7c-4299-b949-caabc91ea210"
       },
       "source": [
         "dados.head()"
       ],
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,17 +586,188 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T5Pte__qVtV4"
+      },
+      "source": [
+        "### Coletando Informações Básicas do DataFrame"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cbwWcW7-TCxf",
+        "outputId": "787b75da-03be-4c7d-8fca-ef7a5f07e90b"
+      },
+      "source": [
+        "#Quantidades de linas e colunas do DataFrame\n",
+        "dados.shape"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(974824, 13)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b5AAQsa8YB8G"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kq9FLL_tUGP8",
+        "outputId": "ac33dc62-62f6-419a-d544-4a5ec24ec454"
       },
       "source": [
-        "dados['death_rate'] = pd.to"
+        "#Descrição do Index\n",
+        "dados.index"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RangeIndex(start=0, stop=974824, step=1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X878OsqxUaA6",
+        "outputId": "505cf721-715e-4515-9e08-bd5e6fc7ea26"
+      },
+      "source": [
+        "#Colunas Presetes no DataFrame\n",
+        "dados.columns"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['date', 'state', 'city', 'place_type', 'confirmed', 'deaths',\n",
+              "       'order_for_place', 'is_last', 'estimated_population', 'city_ibge_code',\n",
+              "       'confirmed_per_100k_inhabitants', 'death_rate',\n",
+              "       'deaths_covid_per_100K_inhabitants'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SUumr_fsUp4M",
+        "outputId": "09d75da9-235a-46ec-bb5c-417599150862"
+      },
+      "source": [
+        "#Contagem de Dados Não Nulos\n",
+        "dados.count()"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "date                                 974824\n",
+              "state                                974824\n",
+              "city                                 968230\n",
+              "place_type                           974824\n",
+              "confirmed                            974824\n",
+              "deaths                               974824\n",
+              "order_for_place                      974824\n",
+              "is_last                              974824\n",
+              "estimated_population                 971052\n",
+              "city_ibge_code                       971052\n",
+              "confirmed_per_100k_inhabitants       957481\n",
+              "death_rate                           974824\n",
+              "deaths_covid_per_100K_inhabitants    971052\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NKNSUod6aQcf",
+        "outputId": "b3910f2a-654e-448d-c8e4-ec61f05fe4bb"
+      },
+      "source": [
+        " #Informação sobre o período de tempo do DataFrame\n",
+        " dados.date.max()-dados.date.min()"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Timedelta('264 days 00:00:00')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "etY7PH01ax-h"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
